--- a/index.Rmd
+++ b/index.Rmd
@@ -2,9 +2,9 @@
 title: "PSY6422 Final Project"
 author: '240189002'
 output:
-  pdf_document: default
   html_document:
     df_print: paged
+  pdf_document: default
 ---
 
 ```{r markdown setup, include=FALSE}
@@ -53,7 +53,7 @@ library(ggplot2)
 library(plotly)
 # scales allows better axes formatting: only using for the population plot
 library(scales)
-# allows for better data handling
+# tools allows for better data handling
 library(tools) 
 # webshot is needed for saving my final interactive plot as a static pdf
 library(webshot2)
@@ -140,7 +140,7 @@ str(data_homes)
 
 ## Plot (1/3): Net Additional Dwellings
 
-```{r plot 1/3, fig.align='center'}
+```{r plot 1/3, fig.align='center', fig.width=10, fig.height=5}
 # Quick visual of our data: does this look correct?
 plot_homes <- ggplot(data = data_homes, mapping = aes(
   x = Year, y = New_Homes, 
@@ -215,7 +215,7 @@ str(data_pop)
 
 ## Plot (2/3): Population
 
-```{r plot 2/3, fig.align='center'}
+```{r plot 2/3, fig.align='center', fig.width=10, fig.height=5}
 plot_pop <- ggplot(data_pop, aes(
   x = Year, y = Population, 
   group = Region, colour = Region)) +
@@ -227,7 +227,6 @@ plot_pop <- ggplot(data_pop, aes(
   scale_x_continuous(breaks = seq(2011, 2023)) +
   #Default logged values showed originally: scaled by million with below code
   scale_y_continuous(labels = label_number(scale = 1e-6, suffix = "m")) 
-
 # View plot
 plot_pop
 ```
@@ -320,50 +319,47 @@ palette <- c(
 "Yorkshire and The Humber" = "#206095") #"Ocean blue"
 ```
 
-```{r}
+
+```{r final plot static, message=FALSE, warning=FALSE, fig.width=10, fig.height=5, dpi=300}
 # Plot it all: initially plotting as a static ggplot
 plot_final_static <- ggplot(data_final, aes(
   x = Year, y = Homes_By_Pop, 
-  group = `Region`, colour = `Region`, # Lines and colors distinct by Region
-  text = paste( # Custom hover text for interactivity and HTML formatting added below
+  group = `Region`, colour = `Region`, #lines and colours distinct by Region
+  text = paste( #Custom hover text for interactivity and html formatting added below
     "<b><i>", Region, "</i></b>", "-", "<b><i>", Year, "</i></b>", 
-    "<br>Population:", format(Population, big.mark = ","), # Bigmark for chunking large numbers
+    "<br>Population:", format(Population, big.mark = ","),#bigmark for chunking large numbers and separating by commas
     "<br>Completed Builds:", format(New_Homes, big.mark = ","), 
-    "<br><b>Homes completed per 1000 people:</b>", round(Homes_By_Pop, 2) # 2 decimal places
+    "<br><b>Homes completed per 1000 people:</b>", round(Homes_By_Pop, 2)#2dp
   ))) +
-  geom_line(size = 1) + # Line plot
-  geom_point(size = 2) + # Combined with points for data
+  geom_line(size = 1) + #line plot
+  geom_point(size = 2) + #combined with points for data
   labs(title = "New Homes Completed per 1000 people by English Region, 2011-2023",
        x = "Year",
        y = "New Homes per 1000 people") +
   scale_x_continuous(
-    breaks = seq(2011, 2023) # Ensures every year is visible on the X-axis
-  ) + 
+    breaks = seq(2011, 2023)) + #ensures every year is visible on X axis
   scale_y_continuous(
-    breaks = seq(1, 5.5, by = 0.5), # Every 0.5 is shown on the Y-axis
-    limits = c(1, 5.5) # Starts at 1 and ends at 5.5, covering the range of the data
-  ) +
-  scale_color_manual(values = palette) + # Apply the custom colour palette
-  theme(
-    # Gridlines along the Y-axis only below:
-    panel.grid.major.y = element_line(color = "gray", size = 0.5),
+    breaks = seq(1, 5.5, by = 0.5), #Every .5 is shown on the Y axis
+    #Starts at 1 and ends at 5.5: before the smallest value and beyond largest
+    limits = c(1, 5.5)) +
+  scale_color_manual(values = palette) + #apply the custom palette
+ theme(
     title = element_text(face = "bold", size = 14),
     axis.title.x = element_text(face = "italic", size = 12),
     axis.title.y = element_text(face = "italic", size = 12),
     axis.text = element_text(size = 10),
-    # White panel and plot background coded below
+    #White panel and plot background coded below
     panel.background = element_rect(fill = "white"),
     plot.background = element_rect(fill = "white"),
-    axis.ticks = element_line(color = "black") # Black ticks
-  )
-
-# Viewing the static, non-interactive plot
+    axis.ticks = element_line(color = "black"), #Black ticks
+    #gridlines along the y axis only:
+    panel.grid.major.y = element_line(color = "gray", size = 0.5)
+        )
+# Viewing the static, non interactive plot...
 plot_final_static
 ```
 
-
-
-```{r final plot interactive}
+```{r final plot interactive, message=FALSE, warning=FALSE}
 # Making static plot interactive for the assessed plot
 #Tooltip settings ensure my custom text is added
 plot_final <- ggplotly(plot_final_static, tooltip = "text", 
@@ -380,6 +376,7 @@ plot_final <- plot_final %>% layout(
     yanchor = 'top',
     y = 0.95), #to avoid title being too close to the top chunk
   #Adding crosshairs for x and y axes: easier to pinpoint data of interest
+  #Will present when interacting
   xaxis = list(
     showspikes = TRUE, 
     spikesnap = "cursor", #based on cursor location: follows your movement
@@ -423,9 +420,7 @@ capture.output(
 
 # Conclusions
 
-I was quite surprised to see how few homes were being built relative to regional populations; I'd expected more of a noticeable increase as years and populations increased. There is the obvious dip due to the pandemic in 2019-2020 due to halting construction activity, and it looks like we're still trying to gain that momentum back in providing new homes.
-
-I found Yorkshire's 2023 increase relative to 2022 interesting, when all other regions drop. This I'm supposing is due to the drive in new housing alongside a moderate increase to population.
+I was quite surprised to see how few homes were being built relative to regional populations; I'd expected more of a noticeable increase as years and populations increased. There is the obvious dip due to the pandemic in 2019-2020 due to halting construction activity, and it looks like we're still trying to gain that momentum back in providing new homes. I found Yorkshire's 2023 increase relative to 2022 interesting, when all other regions drop. This I'm supposing is due to the drive in new housing alongside a more moderate increase to population relative to other regions.
 
 ## Limitations & Future ideas
 
