--- a/index.Rmd
+++ b/index.Rmd
@@ -2,9 +2,9 @@
 title: "PSY6422 Final Project"
 author: '240189002'
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
 ---
 
 ```{r markdown setup, include=FALSE}
@@ -432,9 +432,7 @@ My initial idea for this project was to use data on affordable units of housing 
 
 ## Reflection
 
-I'm quite proud of my plot! It is a relatively simple plot but I learned a lot, and felt a sense of accomplishment when my ideas worked out. I really enjoyed adding in the small details with html too, then seeing it all come together. I think the packages and approach chosen make sense for the question I wanted to look into.
-
-As a personal project and to build on my interests in interactive plots, I'd like to develop a Shiny dashboard relating to housing, specifically into affordability across England. It's all good research into the question: will I ever own my own house?
+I'm quite proud of my plot! It is a relatively simple plot but I learned a lot, and felt a sense of accomplishment when my ideas worked out. I really enjoyed adding in the small details with html too, then seeing it all come together. I think the packages and approach chosen make sense for the question I wanted to look into, but as a personal project it would be interesting to build a Shiny dashboard into housing affordability and encompass more datasets around this topic.
 
 # References
 
